fix nav toggle and button menu item alignments

--- a/sienna-boilerplate.less
+++ b/sienna-boilerplate.less
@@ -483,6 +483,8 @@ a {
 
 .nav-toggle, .menu-toggle {
   display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Larger than phablet (also point when grid becomes active) */
@@ -518,6 +520,7 @@ nav ul {
     letter-spacing: .1rem;
     margin: 0;
     padding: 1.5rem 3.5rem 1.5rem 3.5rem;
+    text-align: left;
     text-decoration: none;
     text-transform: uppercase;
     width: 100%;
